--- a/Frontend/src/Css/Login.css
+++ b/Frontend/src/Css/Login.css
@@ -1,3 +1,4 @@
+@import url('./Theam.css');
 .Inclusive-login-page {
     position: relative;
     width: 100vw;
@@ -5,7 +6,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #EDF0F7;
+    /* background-color: #EDF0F7; */
+    background-color: var(--primary-color);
 }
 
 .login-big-wrapper {
@@ -13,7 +15,7 @@
     max-width: 1100px;
     height: 90%;
     border-radius: 9px;
-    background-color: white;
+    background-color: var(--secondary-color);
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -25,7 +27,7 @@
 }
 
 .login-banner-section {
-    background-color: #0507D4;
+    background-color: var(--focus-color);
     border-radius: 0 9px 9px 0;
     width: 50%;
     display: flex;
@@ -60,10 +62,10 @@
 
 .top-suggest_register a {
     font-size: 0.7rem;
-    color: rgb(13, 16, 163);
+    color: var(--focus-color);
     text-decoration: none;
     font-weight: 600;
-    font-family: 'Inter', sans-serif;
+    font-family: ver(--heading-font);
 }
 
 .top-login-explain {
@@ -75,12 +77,12 @@
     font-weight: bold;
     margin-bottom: 1.4rem;
     font-size: 2.4rem;
-    font-family: 'Signika Negative', sans-serif;
+    font-family: var(--heading-font);
 }
 
 .top-login-explain p {
     color: #afafaf;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--heading-font);
     font-size: 0.7rem;
 }
 
@@ -94,8 +96,8 @@
     top: -10px;
     left: 14px;
     font-size: 0.8rem;
-    font-family: 'Inter', sans-serif;
-    background-color: white;
+    font-family: var(--heading-font);
+    background-color:var(--primary-color);
     color: #646464;
     padding: 0 6px;
 }
@@ -117,20 +119,20 @@
 }
 
 .login-big-wrapper form input:focus-within {
-    border: #0205b1 solid 1px;
+    border: var(--focus-color) solid 1px;
 }
 
 .login-big-wrapper form input:focus+label {
-    color: #0205b1 !important;
+    color: var(--focus-color) !important;
 }
 
 .login-screen__forgotpassword {
     float: right;
     text-decoration: none;
-    font-family: 'Inter', sans-serif;
+    font-family: var(--heading-font);
     font-size: 0.7rem;
     margin-top: -13px;
-    color: rgb(13, 16, 163);
+    color: var(--focus-color) ;
     font-weight: 600;
     cursor: pointer;
     padding: 3px 6px;
@@ -140,7 +142,7 @@
     cursor: pointer;
     border: none;
     outline: 0;
-    background-color: #0205b1;
+    background-color:var(--focus-color) ;
     width: 100%;
     text-align: center;
     color: white;
