--- a/Frontend/src/Css/Login.css
+++ b/Frontend/src/Css/Login.css
@@ -6,8 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: #EDF0F7; */
-    background-color: var(--primary-color);
+background-color: var(--secondary-color);
 }
 
 .login-big-wrapper {
@@ -15,24 +14,33 @@
     max-width: 1100px;
     height: 90%;
     border-radius: 9px;
-    background-color: var(--secondary-color);
+    /* background-color: var(--secondary-color); */
     display: flex;
     justify-content: space-between;
     position: relative;
+    color: var(--complement-color);
 }
 
 .section-wrapper {
     width: 50%;
     padding: 2.6rem 4rem;
+    background-color: var(--primary-color);
 }
 
 .login-banner-section {
-    background-color: var(--focus-color);
+    background-color: var(--secondary-focus-color);
     border-radius: 0 9px 9px 0;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.login-banner-section>img{
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: drop-shadow(0.75em 0.75em 0.75em);
 }
 
 @media only screen and (max-width: 860px) {
@@ -56,7 +64,7 @@
 }
 
 .top-suggest_register span {
-    color: #ABB8c5;
+    color: #797575;
     margin-right: 8px;
 }
 
@@ -81,7 +89,7 @@
 }
 
 .top-login-explain p {
-    color: #afafaf;
+    color: #797575;
     font-family: var(--heading-font);
     font-size: 0.7rem;
 }
